HTML hierarchy & Updated experience

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Hello, world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Gergely Toth's Portfolio</title>
+</head>
+<body>
+	<div class="top-container">
+		<header>
+			<h1>Gergely Toth's <span>Portfolio</span></h1>
+			<h2>Back & Front end Programmer</h2>
+		</header>
+		<section class="container">
+			<div class="angle">
+				<article class="content">
+					<h3><a href="#">CTDParts Catalog</a></h3>
+					<p>A catalog for different parts & equipments. Here I have used CSS3, HTML5 and Javascript for the Front-End, and the Back-End had been done with PHP and MySQL, with a custom Content Management System.</p>
+				</article>
+			</div>
+			<div class="angle">
+				<article class="content">
+					<h3><a href="http://calypsosisland.com">Calypso's Island</a></h3>
+					<p>A WordPress Theme for a client, who wants to showcase her beautiful models and hand-crafted jewellery. Skills used: HTML5, CSS3, jQuery, custom WP Plugin modifications.</p>
+				</article>
+			</div>
+			<div class="angle">
+				<article class="content">
+					<h3><a href="http://ehoroskop.sk">eHoroskop.sk</a></h3>
+					<p>Working with Joomla, made requested modifications on template and on social page integration to increase traffic and Search Engine Ranking.</p>
+				</article>
+			</div>
+			<div class="angle">
+				<article class="content">
+					<h3>Under Construction</h3>
+					<h4>Multipolar FM Radio</h4>
+					<p>A complete redesign and integration from php to Joomla 3. It is a challanging website to make, with up-to-date informtaion handling and a custom built radio module.</p>
+				</article>
+			</div>
+		</section>
+	</div>
+</body>
+</html>
