--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Gergely Toth's Portfolio</title>
+	<!-- Add reset stylesheet by Meyer -->
+	<link rel="stylesheet" type="text/css" href="css/reset.css" />
 </head>
 <body>
 	<div class="top-container">
