--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Gergely Toth's Portfolio</title>
 	<!-- Add reset stylesheet by Meyer -->
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
 	<div class="top-container">
