--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 	<div class="top-container">
 		<header>
 			<h1>Gergely Toth's <span>Portfolio</span></h1>
-			<h2>Back & Front end Programmer</h2>
+			<h2>Back & Front-End Programmer</h2>
 		</header>
 		<section class="container">
-			<div class="angle full" data-stretch="img/lightning.jpg">
-				<article class="content">
-					<h3><a href="#">CTDParts Catalog</a></h3>
-					<p>A catalog for different parts & equipments. Here I have used CSS3, HTML5 and Javascript for the Front-End, and the Back-End had been done with PHP and MySQL, with a custom Content Management System.</p>
-				</article>
-			</div>
-			<div class="angle">
+			<div class="angle full" data-stretch="img/calypso.png">
 				<article class="content">
 					<h3><a href="http://calypsosisland.com">Calypso's Island</a></h3>
 					<p>A WordPress Theme for a client, who wants to showcase her beautiful models and hand-crafted jewellery. Skills used: HTML5, CSS3, jQuery, custom WP Plugin modifications.</p>
 				</article>
 			</div>
-			<div class="angle full" data-stretch="img/lightning.jpg">
+			<div class="angle">
+				<article class="content">
+					<h3><a href="#">CTDParts Catalog</a></h3>
+					<p>A catalog for different parts & equipments. Here I have used CSS3, HTML5 and Javascript for the Front-End, and the Back-End had been done with PHP and MySQL, with a custom Content Management System.</p>
+				</article>
+			</div>
+			<div class="angle full" data-stretch="img/ehoroskop.png">
 				<article class="content">
 					<h3><a href="http://ehoroskop.sk">eHoroskop.sk</a></h3>
 					<p>Working with Joomla, made requested modifications on template and on social page integration to increase traffic and Search Engine Ranking.</p>
