--- a/index.html
+++ b/index.html
@@ -18,19 +18,16 @@
 		<section class="container">
 			<div class="angle full" data-stretch="img/calypso.png">
 				<article class="content">
-					<h3><a href="http://calypsosisland.com">Calypso's Island</a></h3>
+					<h3><a href="http://calypsosisland.com" target="_blank">Calypso's Island</a></h3>
 					<p>A WordPress Theme for a client, who wants to showcase her beautiful models and hand-crafted jewellery. Skills used: HTML5, CSS3, jQuery, custom WP Plugin modifications.</p>
 				</article>
 			</div>
 			<div class="angle">
-				<article class="content">
-					<h3><a href="#">CTDParts Catalog</a></h3>
-					<p>A catalog for different parts & equipments. Here I have used CSS3, HTML5 and Javascript for the Front-End, and the Back-End had been done with PHP and MySQL, with a custom Content Management System.</p>
-				</article>
+				
 			</div>
 			<div class="angle full" data-stretch="img/ehoroskop.png">
 				<article class="content">
-					<h3><a href="http://ehoroskop.sk">eHoroskop.sk</a></h3>
+					<h3><a href="http://ehoroskop.sk" target="_blank">eHoroskop.sk</a></h3>
 					<p>Working with Joomla, made requested modifications on template and on social page integration to increase traffic and Search Engine Ranking.</p>
 				</article>
 			</div>
@@ -39,6 +36,21 @@
 					<h3>Under Construction</h3>
 					<h4>Multipolar FM Radio</h4>
 					<p>A complete redesign and integration from php to Joomla 3. It is a challanging website to make, with up-to-date informtaion handling and a custom built radio module.</p>
+				</article>
+			</div>
+			<div class="angle full" data-stretch="img/ctdparts.png">
+				<article class="content">
+					<h3><a href="http://gergelytoth.com/ctdparts/catalog.php?cat=lamps" target="_blank">CTDParts Catalog</a></h3>
+					<p>A catalog for different parts & equipments. Here I have used CSS3, HTML5 and Javascript for the Front-End, and the Back-End had been done with PHP and MySQL, with a custom Content Management System.</p>
+					<p>Currently on testing site only</p>
+				</article>
+			</div>
+			<div class="angle">
+				<article class="content">
+					<h3>Contact me!</h3>
+					<p>Email: <a href="mailto:tgergely18@gmail.com">tgergely18@gmail.com</a></p>
+					<p>Twitter: <a href="https://twitter.com/tirpox">@Tirpox</a>
+					<p>LinkedIn: <a href="uk.linkedin.com/pub/gergely-toth/67/427/3b4/">Gergely Toth</a></p>
 				</article>
 			</div>
 		</section>
