--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="angle full" data-stretch="img/calypso.png">
 				<article class="content">
 					<h3><a href="http://calypsosisland.com" target="_blank">Calypso's Island</a></h3>
-					<p>A WordPress Theme for a client, who wants to showcase her beautiful models and hand-crafted jewellery. Skills used: HTML5, CSS3, jQuery, custom WP Plugin modifications.</p>
+					<p>A WordPress Theme for a client, who wants to showcase her beautiful models and hand-crafted jewellery. Skills used: HTML5, CSS3, jQuery, custom WordPress Plugin modifications.</p>
 				</article>
 			</div>
 			<div class="angle">
@@ -42,7 +42,7 @@
 				<article class="content">
 					<h3><a href="http://gergelytoth.com/ctdparts/catalog.php?cat=lamps" target="_blank">CTDParts Catalog</a></h3>
 					<p>A catalog for different parts & equipments. Here I have used CSS3, HTML5 and Javascript for the Front-End, and the Back-End had been done with PHP and MySQL, with a custom Content Management System.</p>
-					<p>Currently on testing site only</p>
+					<p>*** Currently on testing site only ***</p>
 				</article>
 			</div>
 			<div class="angle">
