Changed link for CTDParts

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>
 			<div class="angle full" data-stretch="img/ctdparts.png">
 				<article class="content">
-					<h3><a href="http://gergelytoth.com/ctdparts/catalog.php?cat=lamps" target="_blank">CTDParts Catalog</a></h3>
+					<h3><a href="http://ctdparts.com/catalog" target="_blank">CTDParts Catalog</a></h3>
 					<p>A catalog for different parts & equipments. Here I have used CSS3, HTML5 and Javascript for the Front-End, and the Back-End had been done with PHP and MySQL, with a custom Content Management System.</p>
 					<p>*** Currently on testing site only ***</p>
 				</article>
