Updated portfolio with new website
plus services included, image resolution note

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 			<h2>Back & Front-End Programmer</h2>
 		</header>
 		<section class="container">
+			<div class="angle full" data-stretch="img/multipolarfm.png">
+				<article class="content">
+					<h3><a href="http://multipolarfm.com/beta" target="_blank">Multipolar FM</a></h3>
+					<p>A complete redesign and integration from php to Joomla 3. It was a challanging website to make, with up-to-date informtaion handling and a custom built radio module.</p>
+				</article>
+			</div>
+			<div class="angle">
+			
+			</div>
 			<div class="angle full" data-stretch="img/calypso.png">
 				<article class="content">
 					<h3><a href="http://calypsosisland.com" target="_blank">Calypso's Island</a></h3>
@@ -33,9 +42,13 @@
 			</div>
 			<div class="angle">
 				<article class="content">
-					<h3>Under Construction</h3>
-					<h4>Multipolar FM Radio</h4>
-					<p>A complete redesign and integration from php to Joomla 3. It is a challanging website to make, with up-to-date informtaion handling and a custom built radio module.</p>
+					<h3>Services</h3>
+					
+					<p>Responsive Design</p>
+					<p>CMS (Joomla/WordPress) built websites</p>
+					<p>PSD to HTML</p>
+					<p>Website maintainance</p>
+					
 				</article>
 			</div>
 			<div class="angle full" data-stretch="img/ctdparts.png">
