--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<section class="container">
 			<div class="angle full" data-stretch="img/multipolarfm.png">
 				<article class="content">
-					<h3><a href="http://multipolarfm.com/beta" target="_blank">Multipolar FM</a></h3>
+					<h3><a href="http://multipolarfm.com" target="_blank">Multipolar FM</a></h3>
 					<p>A complete redesign and integration from php to Joomla 3. It was a challanging website to make, with up-to-date informtaion handling and a custom built radio module.</p>
 				</article>
 			</div>
@@ -62,7 +62,7 @@
 					<h3>Contact me!</h3>
 					<p>Email: <a href="mailto:tgergely18@gmail.com">tgergely18@gmail.com</a></p>
 					<p>Twitter: <a href="https://twitter.com/tirpox">@Tirpox</a>
-					<p>LinkedIn: <a href="uk.linkedin.com/pub/gergely-toth/67/427/3b4/">Gergely Toth</a></p>
+					<p>LinkedIn: <a href="http://uk.linkedin.com/pub/gergely-toth/67/427/3b4/">Gergely Toth</a></p>
 				</article>
 			</div>
 		</section>
