--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</div>
 			
 			<div class="angle">
-				<article class="content">
+				<article class="content" style="text-shadow: none; color: #192941;">
 					<h3>Contact me!</h3>
 					<p>Email: <a href="mailto:tgergely18@gmail.com">tgergely18@gmail.com</a></p>
 					<p>Twitter: <a href="https://twitter.com/tirpox">@Tirpox</a>
