--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			
 			<div class="angle">
 				<article class="content" style="text-shadow: none; color: #192941;">
-					<h3>Contact me!</h3>
+					<h3 style="color: #192941">Contact me!</h3>
 					<p>Email: <a href="mailto:tgergely18@gmail.com">tgergely18@gmail.com</a></p>
 					<p>Twitter: <a href="https://twitter.com/tirpox">@Tirpox</a>
 					<p>LinkedIn: <a href="http://uk.linkedin.com/pub/gergely-toth/67/427/3b4/">Gergely Toth</a></p>
